Fixed padding in .nav-ul li in style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Jamil Images - A Premier Photography Service Provider</title>
+  <title>Jamil Images - A Premier Photography Service</title>
   <link rel="stylesheet" href="css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
