Added color var to .css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   <section id="home" class="section-home">
     <div class="content">
-      <h1 class="title">Premier Photography Service Provider</h1>
+      <h1 class="title">Premier Photography Service</h1>
       <p>We specialize in capturing precious memories at special events such as birthday parties, and weddings and
         provide professional headshots for businesses. Our experienced photographers create unique, personalized images
         that perfectly capture the essence of your moments. Browse our portfolio and book your session today to create
