Updated index.html but submitted an issue regarding sidebar nav

--- a/index.html
+++ b/index.html
@@ -42,13 +42,21 @@
         <br></br>
         Browse our portfolio and book your session today to create
         lasting memories.
-        
       </p>
     </div>
   </section>
   <section id="about" class="section-about">
     <div class="content">
       <h1 class="title">About</h1>
+
+      <p>Jamil Matheny is a multi-talented individual with a passion for technology and creative expression.
+        <br></br>As a developer, he has a wealth of experience in various programming languages and technologies, including web development, mobile app development, and data analysis. 
+        <br></br>He shares his knowledge and insights through his YouTube channel, where he creates videos on various tech-related topics, ranging from tutorials on specific programming languages to discussions on the latest trends in the industry.
+        <br></br>Aside from his work in technology, Jamil is also an accomplished photographer who enjoys capturing beautiful moments and stunning landscapes. 
+        <br></br>He often incorporates his love for photography into his tech-related content, showing viewers how to edit photos using various software tools.
+        <br></br>As a learner, Jamil is constantly seeking new challenges and experiences. He has a deep curiosity about the world and a drive to learn and grow as a person and professional. 
+        <br></br>If you're interested in following his work, you can check out his website, jamilimages.com, and his YouTube channel at youtube.com/@jmathtech.
+      </p>
       <p>Jamil Images, LLC was established by Jamil Matheny in June 2019.
         <br></br>Jamil's passion for photography began in high school and has since expanded to include a wide range of
         events and subjects.
@@ -81,11 +89,23 @@
       </p>
     </div>
   </section>
+  <button id="back-to-top-btn">▲</button>
   <footer>
-    <p> Copyright © 2023 Jamil Images, LLC. All Rights Reserved. Site designed by Jamil Matheny.</p>
+    <p> Copyright © 2023 Jamil Images, LLC. All Rights Reserved.  Site designed by Jamil Matheny. 
+      <p><script type="text/javascript"> //<![CDATA[
+      var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
+      document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+    //]]></script>
+    <script language="JavaScript" type="text/javascript">
+      TrustLogo("https://www.positivessl.com/images/seals/positivessl_trust_seal_md_167x42.png", "POSDV", "none");
+    </script>
+    </p>
   </footer>
   <script src="./js/hamburger-menu.js"></script>
   <script src="./js/navclick.js"></script>
+  <script src="./js/backtotop.js"></script>
+
+  
 </body>
 
 </html>
