Updated stylesheet and index, also remove other files as well.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Custom made by Jamil Images, LLC. Property of Jamil Images, LLC. 2023
+Last Updated: 03.15.2023  -->
+
 <!DOCTYPE html>
 <html>
 
@@ -5,6 +8,10 @@
   <title>Jamil Images - A Premier Photography Service</title>
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
   <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700">
+
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -12,7 +19,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img src="./img/logo.png" alt="JI logo" class="logo" /></a>
+    <a href="https://www.jamilimages.com"><img src="./img/logo.png" alt="JI logo" class="logo" /></a>
     <button class="hamburger-menu">
       <div class="bar"></div>
       <div class="bar"></div>
@@ -22,15 +29,17 @@
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="https://jamilimages.pixieset.com" target="_blank">Gallery</a></li>
-        <li><a href="#book">Book Us</a></li>        
+        <li><a href="#book">Pricing</a></li>
+        <li><a href="#faq">FAQ</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="https://jamilimages.pixieset.com" target="_blank">Client Gallery</a></li>
       </ul>
     </nav>
   </header>
+
   <section id="home" class="section-home">
     <div class="content">
-      <h1 class="title">Welcome To A Premier Photography Service</h1>
+      <h1 class="title" id="neonLight">Shine Your Light</h1>
       <p>We specialize in capturing precious memories at special events such as birthday parties, and weddings and
         provide professional headshots for businesses.
         <br></br>
@@ -43,69 +52,157 @@
         Browse our portfolio and book your session today to create
         lasting memories.
       </p>
+      <p><a href="#book"><button class="red-button">BOOK A PHOTO SESSION TODAY!</button></a></p>
     </div>
   </section>
+
   <section id="about" class="section-about">
     <div class="content">
       <h1 class="title">About</h1>
 
       <p>Jamil Matheny is a multi-talented individual with a passion for technology and creative expression.
-        <br></br>As a developer, he has a wealth of experience in various programming languages and technologies, including web development, mobile app development, and data analysis. 
-        <br></br>He shares his knowledge and insights through his YouTube channel, where he creates videos on various tech-related topics, ranging from tutorials on specific programming languages to discussions on the latest trends in the industry.
-        <br></br>Aside from his work in technology, Jamil is also an accomplished photographer who enjoys capturing beautiful moments and stunning landscapes. 
-        <br></br>He often incorporates his love for photography into his tech-related content, showing viewers how to edit photos using various software tools.
-        <br></br>As a learner, Jamil is constantly seeking new challenges and experiences. He has a deep curiosity about the world and a drive to learn and grow as a person and professional. 
-        <br></br>If you're interested in following his work, you can check out his website, jamilimages.com, and his YouTube channel at youtube.com/@jmathtech.
+        <br></br>As a developer, he has a wealth of experience in various programming languages and technologies,
+        including web development, mobile app development, and data analysis.
+        <br></br>He shares his knowledge and insights through his YouTube channel, where he creates videos on various
+        tech-related topics, ranging from tutorials on specific programming languages to discussions on the latest
+        trends in the industry.
+        <br></br>Aside from his work in technology, Jamil is also an accomplished photographer who enjoys capturing
+        beautiful moments and stunning landscapes.
+        <br></br>He often incorporates his love for photography into his tech-related content, showing viewers how to
+        edit photos using various software tools.
+        <br></br>As a learner, Jamil is constantly seeking new challenges and experiences. He has a deep curiosity about
+        the world and a drive to learn and grow as a person and professional.
+        <br></br>If you're interested in following his work, you can check out his website, jamilimages.com, and his
+        YouTube channel at <a href="https://www.youtube.com/@jmathtech" target="_blank">youtube.com/@jmathtech</a>.
       </p>
-      <p>Jamil Images, LLC was established by Jamil Matheny in June 2019.
-        <br></br>Jamil's passion for photography began in high school and has since expanded to include a wide range of
+      <p>Jamil Images, LLC was established by Jamil Matheny in March 2019.
+        <br></br>Jamil's passion for photography began decades ago and has since expanded to include a wide range of
         events and subjects.
         <br></br>With a focus on capturing the essence of concerts, community events, businesses, and products, Jamil
         has established a dynamic portfolio of stunning images.
+      <p class="img-media">
+          <img src="./img/RTD_logo_transparent_reversed.png" width="15%" \><br></br>
+        <a href="./img/344705572_03be87188e_o.jpg" target="_blank"><img src="./img/344705572_03be87188e_o.jpg"  width="15%" height="15%" class="img-news" \></a>
+        <a href="https://www.rvafw.com" target="_blank"><img src="./img/3434534542_wer2er45345_0.jpg"  width="100%" height="100%" class="img-news" \></a>
+
+        <a href="https://dcfashionweek.org/" target="_blank"><img src="./img/324687678564_wg45g434g.jpg"  width="100%" height="100%" class="img-news" \></a>
+
       </p>
+     
+    </p>
+
+      
     </div>
   </section>
+
   <section id="book">
     <div class="content">
-      <iframe src="https://app.acuityscheduling.com/schedule.php?owner=16942125" title="Schedule Appointment" width="100%" height="3024" frameBorder="0"></iframe>
+      <iframe src="https://app.acuityscheduling.com/schedule.php?owner=16942125" title="Schedule Appointment"
+        width="100%" height="3024" frameBorder="0"></iframe>
     </div>
   </section>
-  <section id="contact" class="section-contact">
+
+  <section id="faq" class="section-faq">
     <div class="content">
-      <h1 class="title">Contact</h1>
+      <h1 class="title">FAQ</h1>
       <p>
-        <form action="./mail/mail.php" class="contact-form">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" placeholder="Your Name" required>
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" placeholder="Your Email" required>
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="5" placeholder="What's Your Message?" required></textarea>
-
-          <input type="submit" value="Submit">
-        </form>
+        <b>Q: What is Jamil Images?</b> <br />
+        A: Jamil Images, LLC. is a photography services company that provides high-quality photography services for
+        various events such as weddings, corporate events, and family gatherings.
+        Our experienced photographers create unique, personalized images
+        that perfectly capture the essence of your moments.
+        <br></br>
+        <b>Q: How long does it take to ship print orders from Jamil Images?</b><br />
+        A: Shipping usually takes between 3-5 business days. However, delivery times may vary depending on your location
+        and the availability of the product you ordered.
+        <br></br>
+        <b>Q: What kind of photography services does Jamil Images offer?</b><br />
+        A: Jamil Images offers professional photography services for various events such as weddings, corporate events,
+        photos for press kits and family gatherings. We provide a half-hour of photography coverage before the event
+        starts.
+        <br></br>
+        <b>Q: Can I book a Jamil Images photographer for a last-minute event?</b><br />
+        A: It's best to book a photographer in advance to ensure their availability, but Jamil Images may be able to
+        accommodate last-minute bookings depending on their schedule.
+        <br></br>
+        <b>Q: What is the cost of Jamil Images photography services?</b><br />
+        A: The cost of Jamil Images photography services may vary depending on the type of event and the amount of
+        coverage needed. Book an appointment with us today or contact Jamil Images for a quote based on your specific
+        needs.
+        <br></br>
+        <b>Q: Can I order prints of the photos taken by Jamil Images?</b><br />
+        A: Yes, Jamil Images offers a range of print options, including canvas prints, framed prints, and photo albums.
+        Contact Jamil Images for more information about print options and pricing.
+        <br></br>
+        <b>Q: Can I see examples of Jamil Images' previous work?</b><br />
+        A: Yes, Jamil Images has a portfolio of their previous work on our website. 
+        <br></br>
+        <b>Q: What if I have specific requests or ideas for my event's photography?</b><br />
+        A: Jamil Images is open to hearing your specific requests and ideas and will work with you to create a
+        customized package that fits your needs. Contact us to discuss your ideas and preferences.
       </p>
     </div>
   </section>
+
   <button id="back-to-top-btn">▲</button>
-  <footer>
-    <p> Copyright © 2023 Jamil Images, LLC. All Rights Reserved.  Site designed by Jamil Matheny. 
-      <p><script type="text/javascript"> //<![CDATA[
-      var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
-      document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
-    //]]></script>
-    <script language="JavaScript" type="text/javascript">
-      TrustLogo("https://www.positivessl.com/images/seals/positivessl_trust_seal_md_167x42.png", "POSDV", "none");
-    </script>
-    </p>
-  </footer>
+
+  <section id="contact" class="section-contact">
+    <footer class="footer-distributed">
+
+      <div class="footer-left">
+
+        <a href="https://www.jamilimages.com"><img src="./img/logo.png" alt="JI logo" class="logo" /></a>
+
+        <p class="footer-links">
+          <a href="#home" class="link-1">Home</a>
+          <a href="#about">About</a>
+          <a href="#book">Pricing</a>
+          <a href="#faq">FAQ</a>
+          <a href="#contact">Contact</a>
+          <a href="https://jamilimages.pixieset.com" target="_blank">Client Gallery</a>
+
+        </p>
+
+        <p class="footer-company-name">Jamil Images, LLC © 2019-2023. All Rights Reserved.</p>
+      </div>
+
+      <div class="footer-center">
+
+        <div>
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <p><span>405 E Laburnum Ave Ste 3<br> Richmond, Virginia 23222</span></p>
+        </div>
+
+        <div>
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          <p><a href="tel:8043627561">+1.804.362.7561</a></p>
+        </div>
+
+        <div>
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <p><a href="mailto:admin@jamilimages.com">admin@jamilimages.com</a></p>
+        </div>
+
+      </div>
+
+      <div class="footer-right">
+        <div class="footer-icons">
+
+          <a href="https://www.facebook.com/jamilimages" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.twitter.com/jamilimages" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/jamil.images" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://www.github.com/jmathtech" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a href="https://stackoverflow.com/users/12920349/jamil-matheny" target="_blank"><i class="fa-brands fa-stack-overflow" aria-hidden="true"></i></a>
+        </div>
+
+      </div>
+
+    </footer>
+  </section>
+  <script src="https://kit.fontawesome.com/faba93d1a5.js" crossorigin="anonymous"></script>
   <script src="./js/hamburger-menu.js"></script>
   <script src="./js/navclick.js"></script>
   <script src="./js/backtotop.js"></script>
-
-  
 </body>
 
 </html>
