Updated styles.css and index.html docs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Last Updated: 04.10.2023  -->
   <section id="book">
     <div class="content">
       <iframe src="https://app.acuityscheduling.com/schedule.php?owner=16942125" title="Schedule Appointment"
-        width="100%" height="3024" frameBorder="0"></iframe>
+        width="100%" height="3324" frameBorder="0"></iframe>
     </div>
   </section>
 
@@ -132,7 +132,8 @@ Last Updated: 04.10.2023  -->
         Schedule an appointment today and watch us work our magic!
         <br></br>
         <b>Q: How long does it take to ship print orders from Jamil Images?</b><br />
-        A: Shipping usually takes between 3-5 business days. However, delivery times may vary depending on your location
+        A: Shipping usually takes between 2-3 days depending on the quantity of the order purchased. However, delivery
+        times may vary depending on your location
         and the availability of the product you ordered.
         <br></br>
         <b>Q: Do you have a studio?</b> <br />
@@ -163,48 +164,49 @@ Last Updated: 04.10.2023  -->
 
   <button id="back-to-top-btn">▲</button>
 
+  <!-- Contact Section -->
+
   <section id="contact" class="section-contact">
     <footer>
       <div class="footer-container">
-        <div class="row">
-          <div class="col-sm-6 col-md-4 item">
-            <h3>About</h3>
-            <ul>
-              <li><a href="https://jamilimages.pixieset.com/policy/terms/">Terms of Service</a></li>
-              <li><a href="https://jamilimages.pixieset.com/policy/privacy/">Privacy Policy</a></li>
-              <li><a href="https://jamilimages.pixieset.com/policy/cookies/">Cookies Policy</a></li>
-            </ul>
-          </div>
 
-          <div class="col-sm-8 col-md-4 item">
-            <h3>Contact</h3>
-            <ul>
-              <li>
-                <iframe width="250" height="200" style="border:0" loading="lazy" allowfullscreen
-                  src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJwU7_gPghEEQRr8w7a_ZAg2M&key=AIzaSyCPO5TVMTZMll89MbzDHY_DcgVZPKIfrf4"></iframe>
-              </li>
-              <li>
-                3302 Williamsburg Rd., Suite 42, Richmond, VA 23231
-              </li>
-              </br>
-              <li>
-                <a href="tel:8043627561">804-362-7561</a>
-              </li>
-              </br>
-              <li>
-                <a href="mailto:admin@jamilimages.com">admin@jamilimages.com</a>
-              </li>
-              <br></br>
-                <b>Mailing Address</b>
-                <li>405 E. Laburnum Ave. Richmond, VA 23222</li>
-            </ul>
-          </div>
+        <div class="col-sm-4 col-md-3 item">
+          <h3>Contact</h3>
+          <ul>
+            <li>
+              <iframe width="280" height="225" style="border:0" loading="lazy" allowfullscreen
+                src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJwU7_gPghEEQRr8w7a_ZAg2M&key=AIzaSyCPO5TVMTZMll89MbzDHY_DcgVZPKIfrf4"></iframe>
+            </li>
+            <li>
+              3302 Williamsburg Rd., Suite 42
+            <li>Richmond, VA 23231</li>
+            </li>
+            <li>
+              <a href="tel:8043627561">804-362-7561</a>
+            </li>
+            <li>
+              <a href="mailto:admin@jamilimages.com">admin@jamilimages.com</a>
+            </li>
+            <br></br>
+            <b>Mailing Address</b>
+            <li>405 E. Laburnum Ave. Richmond, VA 23222</li>
+          </ul>
+        </div>
 
-          <div class="col-md-8 item social"><a href="https://www.facebook.com/jamilimages"><i class="fa fa-facebook"></i></a><a href="https://www.twitter.com/jamilimages"><i
-                class="fa fa-twitter"></i></a><a href="https://www.instagram.com/jamil.images"><i class="fa fa-instagram"></i></a>
-            <p class="copyright">© 2023 Jamil Images, LLC. All Rights Reserved.</p>
-          </div>
+        <div class="col-sm-4 col-md-2 item">
+          <h3>About</h3>
+          <ul>
+            <li><a href="https://jamilimages.pixieset.com/policy/terms/">Terms of Service</a></li>
+            <li><a href="https://jamilimages.pixieset.com/policy/privacy/">Privacy Policy</a></li>
+            <li><a href="https://jamilimages.pixieset.com/policy/cookies/">Cookies Policy</a></li>
+          </ul>
+        </div>
 
+        <div class="col-sm-2 col-md-2 item social"><a href="https://www.facebook.com/jamilimages"><i
+              class="fa fa-facebook"></i></a><a href="https://www.twitter.com/jamilimages"><i
+              class="fa fa-twitter"></i></a><a href="https://www.instagram.com/jamil.images"><i
+              class="fa fa-instagram"></i></a>
+          <p class="copyright">© 2023 Jamil Images, LLC. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
